# FlowTransOP

./: .gitignore  LICENSE  README.md  pyproject.toml  ~WRL0005.tmp
FoundationalARCHS4/: ARCHS4_README.txt  ARCHS4_archs4py_documentation.md  ARCHS4_quick_reference.md  ARCHS4_train_CV.sh  archs4_data_retrieval_example.py
archs4/: README.md
learning/: ARCHS4_train_CV.sh  ARCHS4_train_full_ensemble.sh  AutoTransOP_Pretrain_FlowMatch.py  AutoTransOP_Pretrain_FlowMatchPaired_lowPairsPercentage.py  AutoTransOP_Pretrain_FlowMatch_differentInputs.py  AutoTransOP_Pretrain_FlowMatch_differentInputs_bracketed.py  AutoTransOP_Pretrain_FlowMatch_lowPairsPercentage.py  AutoTransOP_Pretrain_FlowMatch_lowPairsPercentageExtreme.py  AutoTransOP_Pretrain_FlowMatch_lowPairsPercentageExtreme_withPairs.py  AutoTransOP_Pretrain_FlowMatch_reverse.py  AutoTransOP_Pretrain_FlowMatch_withPairs.py  AutoTransOP_Pretrain_FlowMatch_withSTRUCTURE.py  AutoTransOP_lowPairsPercentageExtreme.py  DecodeFromConsencusSpace.py  DecodeFromConsencusSpaceRandomPairs.py  DecodeFromConsencusSpace_diffenetInputs.py  DecodeFromConsencusSpace_diffenetInputs_bracketed.py  FlowMatch_lowPairsPercentageExtreme_PairsAndSimilarity.py  FlowMatch_lowPairsPercentageExtreme_PairsAndSimilarity_meanAgg.py  FlowMatch_lowPairsPercentageExtreme_PairsAndSimilarity_sumAgg.py  FlowMatch_lowPairsPercentage_PairsAndSimilarity.py  InitialAligner_GPUvsCPU_celline_pairs.py  InitialAligner_GPUvsCPU_celline_pairs_random_subsampling.py  InitialAligner_GPUvsCPU_random_data.py  InitialAligner_GPUvsCPU_sameCell_diffInput.py  README.md  (+45 more)
(+764 files in other folders)
